
	* core/Form/Primitives/PrimitiveString.class.php: '0' is a valid
	string too.

2008-04-26	Denis M. Gabaidulin

	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator
	filter were merged from 0.10.

2008-04-16	Ivan Y. Khvostishkov

	* core/Exceptions/DatabaseIsDownException.class.php: when connect
	fails.

2008-04-13	Konstantin V. Arkhipov

	* core/Types/Range.class.php: API changed wrt SingleRange interface
	and RangedType class.

	* core/Form/Primitives/: ported to use basic types as input validation.

	* core/Types/: new types were implemented or ported from standalone
	classes: Binary, Boolean, Date, DateRange, HashMap, Range, Time,
	Timestamp, Range.

	* global.inc.php.tpl: class cache now detects classes with errors
	during compile time.

	* core/Cache/SemaphorePool.class.php: DirectoryLocker is the default
	locker now.

2008-04-09	Ivan Y. Khvostishkov

	* core/Form/Primitives/BasePrimitive.class.php: spawn() method for
	cloning primitives. It's one of the possible soft-tricks to implement
	anonymous primitives.

2008-04-08	Konstantin V. Arkhipov

	* core/Form/: RegulatedForm removed in favour of PrimitiveRule.

2008-04-07	Konstantin V. Arkhipov

	* meta/: added __sleep() generation in auto classes to prvent
	collections serialization; fixed parent's __construct() calling in
	classes with value objects inside.

	* main/UnifiedContainer/UnifiedContainer.class.php: worker's
	serialization prevention implemented.

2008-04-03	Denis M. Gabaidulin

	* meta/classes/MetaConfiguration.class.php: lazy fetching strategy
	support for SpookedClass properties.

2008-04-03	Konstantin V. Arkhipov

	* main/Math/BigInteger.class.php: renamed to ExternalBigInteger.

2008-04-02	Ivan Y. Khvostishkov

	* main/Application/: refactoring. Added test cases for HttpRewriter.

	* core/Base/Scope.class.php: simple but useful wrapper for arrays.

2008-04-02	Konstantin V. Arkhipov

	* core/Form/: array type-hint added to import's scope argument and all