@@ -20,6 +20,8 @@
 
 2008-04-13	Konstantin V. Arkhipov
 
+	* test/core/: tests for Binary and Boolean types added.
+
 	* core/Types/Range.class.php: API changed wrt SingleRange interface
 	and RangedType class.
 
